# statusmatch-poc

./: .dockerignore  Dockerfile  compose.yaml
.github/ISSUE_TEMPLATE/: バグの報告.md  機能の提案.md  機能提案.md
.github/workflows/: cloud-run.yaml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yaml  docker-compose.yml  sqlx-data.json
backend/cocoweb/: Cargo.toml
backend/cocoweb/src/: lib.rs
backend/dormyinn/: Cargo.toml
backend/dormyinn/src/: lib.rs  main.rs
backend/dormys/: Cargo.toml
backend/dormys/src/: lib.rs  main.rs
backend/migrations/: 20230209050035_init.sql  20230228104332_add-challenges-table.sql  20230228231441_add-users-table.sql  20230301112442_add-authenticated-column-into-chellenges-table.sql  20230303053749_add-user_credentials-table.sql  20230303075252_add-user_pubkey-column-into-challenges-table.sql  20230308083319_add-user_statuses-table.sql
backend/public/: index.html
backend/src/: auth.rs  lib.rs  main.rs
cli/: Cargo.toml
cli/src/: db.rs  entities.rs  lib.rs  main.rs  scrape.rs  statusmatch.rs  usecase.rs
frontend/: .gitignore  Makefile  app.ts  elm-watch.json  elm.json  package-lock.json  package.json  shell.nix
frontend/public/: index.html
frontend/src/: Api.elm  Main.elm  MatrixTheme.elm
scrape_statusmatcher/: Cargo.toml
scrape_statusmatcher/src/: main.rs
scraper/: .env  Cargo.toml  Dockerfile  sqlx-data.json
scraper/src/: lib.rs  main.rs
