[package]
name = "statusmatch_poc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11", features = ["web-axum"] }
axum = { version = "0.6.4", features = ["macros"] }
sync_wrapper = "0.1.2"
shuttle-static-folder = "0.11"
axum-extra = { version = "0.4.2", features = ["spa"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
shuttle-shared-db = { version = "0.11", features = ["postgres", "sqlx"] }
sqlx = { version = "0.6.2", features = ["postgres", "macros", "offline"] }
shuttle-secrets = "0.11"
rand = "0.8.5"
hex = "0.4.3"
bech32 = "0.9.1"
secp256k1 = "0.26.0"
tokio = { version = "1.22", features = ["full"] }
dotenv = "0.15.0"

[workspace]

members = [
    "dormyinn"
]
