[package]
name = "statusmatch_poc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.9", features = ["macros", "headers"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = ["postgres", "macros", "offline", "runtime-tokio-rustls"] }
hex = "0.4.3"
bech32 = "0.9.1"
secp256k1 = "0.26.0"
tokio = { version = "1.26", features = ["full"] }
dotenv = "0.15.0"
dormys = { path = "dormys" }
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
futures = "0.3.26"
async-stream = "0.3.4"
chrono = "0.4.23"
tower-http = { version = "0.4.0", features = ["fs"] }

[workspace]

members = [
    "dormys"
]
