[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
headless_chrome = "1.0.5"
serde = { version = "1.0.153", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "macros", "offline", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
